# bazel-typescript-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
src/: BUILD.bazel  dep.ts  main.ts  react.tsx
