package(default_visibility=["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

nodejs_binary(
    name = "bin",
    data = [":main"],
    entry_point = "workspace/src/main.js",
)

ts_library(
    name = "main",
    srcs = ["main.ts"],
    deps = [":dep"],
)

ts_library(
    name = "dep",
    srcs = ["dep.ts"],
)
